--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+Ganzenbord/\.idea/workspace\.xml
